--- a/obv_messenger/app/src/main/res/layout/fragment_discussion_compose.xml
+++ b/obv_messenger/app/src/main/res/layout/fragment_discussion_compose.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginBottom="4dp"
-        app:cardBackgroundColor="@color/white"
+        app:cardBackgroundColor="@color/imessage_tab_bar_bg"
         app:cardCornerRadius="24dp"
         app:cardElevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -301,18 +301,15 @@
 
             <ImageButton
                 android:id="@+id/compose_message_send_button"
-                android:layout_width="32dp"
-                android:layout_height="36dp"
-                android:background="?attr/selectableItemBackgroundBorderless"
+                android:layout_width="@dimen/imessage_send_button_size"
+                android:layout_height="@dimen/imessage_send_button_size"
+                android:background="@drawable/background_imessage_send_button"
                 android:clickable="true"
                 android:contentDescription="@string/content_description_send_message"
                 android:focusable="true"
-                android:paddingStart="2dp"
-                android:paddingTop="5dp"
-                android:paddingEnd="6dp"
-                android:paddingBottom="7dp"
-                android:theme="@style/SubtleBlueRipple"
-                app:tint="@color/imessage_blue"
+                android:padding="0dp"
+                android:scaleType="center"
+                app:tint="@color/imessage_sent_text"
                 app:layout_constraintBottom_toBottomOf="@id/compose_message_edit_text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:srcCompat="@drawable/ic_send" />
